--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "todo"
+name = "rust_brainfuck"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.79"
-clap = { version = "4.4.18", features = ["derive"] }
-colored = "2.1.0"
-home = "0.5.9"
-serde = { version = "1.0.195", features = ["derive"] }
-serde_yaml = "0.9.30"
+itertools = "0.13.0"
