--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 anyhow = "1.0.86"
 clap = { version = "4.5.9", features = ["derive"] }
 itertools = "0.13.0"
+serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+# serde_json is just for the example, not required in general
+serde_json = "1.0"
